--- a/get-started/concepts.mdx
+++ b/get-started/concepts.mdx
@@ -34,11 +34,11 @@ Models are used to analyze content. You can add multiple models to a project. Ea
 
 </CardGroup>
 
-| Model                 | Needs training data | Self-learning | Customizable | Accuracy | Effort |
-| --------------------- | ------------------- | ------------- | ------------ | -------- | ------ |
-| **Ready-made models** | No                  | No            | No           | High     | Low    |
-| **AI agents**         | No                  | No            | ✅           | Medium   | Medium |
-| **Custom models**     | ✅                  | ✅            | ✅           | High     | High   |
+| Model                 | Needs training data | Customizable | Accuracy    | Effort |
+| --------------------- | ------------------- | ------------ | ----------- | ------ |
+| **Ready-made models** | No                  | No           | High        | Low    |
+| **AI agents**         | No                  | ✅           | Medium-High | Medium |
+| **Custom models**     | ✅                  | ✅           | High        | High   |
 
 ## Review queues
 
