--- a/custom-models/creating-a-model.mdx
+++ b/custom-models/creating-a-model.mdx
@@ -4,7 +4,7 @@ sidebarTitle: "Creating a model"
 description: "Learn how to create a custom model using Moderation API"
 ---
 
-Head over to your moderation API dashboard and press the models tab. Here you can create a new model. [Direct link](https://moderationapi.com/app/models/custom).
+Head over to the Model Studio and press the models tab. Here you can create a new custom model. [Model Studio](https://moderationapi.com/app/models).
 
 ## 1. Select your type of model
 
