--- a/ai-agents/creating-an-agent.mdx
+++ b/ai-agents/creating-an-agent.mdx
@@ -1,11 +1,75 @@
 ---
 title: "How to create an AI Agent"
 sidebarTitle: "Creating an agent"
-description: "Learn how to create AI agents to classify your content."
+description: "Learn how to create AI agents for content moderation."
 ---
 
-Head over to the [AI Agents page](https://moderationapi.com/app/models/ai-agent) in your dashboard and press the "Add new agent" button.
+AI Agents are one of the easiest ways to customize your moderation policies. You can create an agent in minutes, and use it to moderate your content in your projects.
 
-When creating an AI Agent you first have to add your guidelines / rules for the agent to follow. Here it's best to very sepcific but keep it simple.
+To create an AI agent you simply explain what your content policies are, and the AI agent will classify content based on your instructions.
 
-You can also set a strictness level for the agent. This will determine how strict the agent is when detecting content. For example the easygoing agent might let some mild violations through, while the strict agent will be better safe than sorry.
+## How it works
+
+<Steps>
+  <Step title="Define purpose">
+    Give your agent a name, describe its job, and choose which LLM to use.
+  </Step>
+  <Step title="Add your rules">
+    Add content policies that the agent should follow. You can select from a
+    list of pre-defined rules, or create your own.
+  </Step>
+  <Step title="Use your AI agent">
+    Add the agent to classify your content in your projects.
+  </Step>
+</Steps>
+
+<Note>
+## Need help getting started?
+
+If you need help creating AI agents please [send us a message](https://moderationapi.com/sales) any time. We're happy to help you set up your first agent.
+
+</Note>
+
+## Get started
+
+Head over to the [Model Studio](https://moderationapi.com/app/models) in your dashboard and press the "Add new agent" button.
+
+Here you'll give your agent a name and describe what it's job is. These fields are not used for moderation, but are useful for you to identify the agent.
+
+Next you'll need to choose which LLM model should power your agent. We recommend using Llama Guard 3 because it's optimized for moderation, but you can also use GPT-4o-mini.
+
+## Choose between Llama guard and GPT
+
+We currently offer two LLM models for AI agents:
+
+<CardGroup cols={2}>
+  <Card title="Llama Guard 3" icon="meta">
+    LLM model that is optimized for moderation. Recommended for most use cases.
+  </Card>
+  <Card title="GPT-4o-mini" icon="microsoft">
+    OpenAI's latest model. Recommended if you need to moderate something that is
+    not covered by Llama Guard 3.
+  </Card>
+</CardGroup>
+
+<Note>
+  Note, if you would like to use a different LLM model, please [send us a
+  message](https://moderationapi.com/sales) and we'll see what we can do.
+</Note>
+
+**Benefits of Llama guard compared to GPT-4o-mini:**
+
+- Faster for real-time applications
+- More accurate within the 14 safety categories
+- Hosted on GDPR compliant GPU servers in Germany
+- Can be on-premise for enterprise customers
+- Can be fine-tuned for enterprise customers
+- Returns probability scores instead of binary flags
+
+**When to use GPT-4o-mini over Llama guard:**
+
+- For custom safety categories that fall far outside the scope of the MLCommons safety categories
+- If you prefer false positives over false negatives
+- When speed is not crucial
+
+You can read more about Llama Guard 3 [here](https://moderationapi.com/blog/llama-guard-3-on-moderation-api/) and GPT-4o-mini [here](https://moderationapi.com/blog/gpt-4o-mini-for-ai-agents/).
