--- a/ai-agents/using-your-agent.mdx
+++ b/ai-agents/using-your-agent.mdx
@@ -1,9 +1,11 @@
 ---
 title: "Using AI agents"
-sidebarTitle: "Using an agent"
+sidebarTitle: "Using your agent"
 ---
 
 After you've created an agent, the model will show up alongside all the ready-made models in your project, and you can [add it like any other model](/content-moderation/adding-models).
+
+The agent will classify your content based on the safety categories you've defined when creating the agent.
 
 ### Response signature
 
@@ -14,7 +16,8 @@ AI agents have a similar response signature to the [ready-made classifiers](/mod
   triggered.
 </ResponseField>
 <ResponseField name="score" type="number" required>
-  The score of the most probable label. Always 1 or 0.
+  The score of the most probable label. LLama Guard returns a probability score
+  between 0 and 1, whereas GPT-4o-mini returns a binary classification 1 or 0.
 </ResponseField>
 <ResponseField name="label_scores" type="object" required>
   An object containing all the rules with either 0 or 1 as the score.
