--- a/get-started/concepts.mdx
+++ b/get-started/concepts.mdx
@@ -13,32 +13,13 @@ Each project has its own API key, so you can create multiple projects for exampl
 
 Models are used to analyze content. You can add multiple models to a project. Each model has its own settings and can be used to analyze content in a different way. <br></br>
 
-#### 3 types of models
+We offer 3 types of models:
 
-<CardGroup cols={3}>
+- Ready-made models
+- Custom models
+- AI agents
 
-<Card title="Ready-made models" href="/models/overview" icon="cube">
-  These are pre-built models that can be used to analyze content without any
-  additional training.
-</Card>
-
-<Card title="Custom models" href="/custom-models/overview" icon="sparkles">
-  These are models that are trained on user-provided data to analyze content
-  specific to their use case.
-</Card>
-
-<Card title="AI agents" href="/ai-agents/overview" icon="robot">
-  AI agents is a way of creating your own model, without prior training data.
-  Just provide the AI with your own set of rules.
-</Card>
-
-</CardGroup>
-
-| Model                 | Needs training data | Customizable | Accuracy    | Effort |
-| --------------------- | ------------------- | ------------ | ----------- | ------ |
-| **Ready-made models** | No                  | No           | High        | Low    |
-| **AI agents**         | No                  | ✅           | Medium-High | Medium |
-| **Custom models**     | ✅                  | ✅           | High        | High   |
+Read more about the different types of models in the [Model Studio](/model-studio/overview) section.
 
 ## Review queues
 
