--- a/custom-models/using.mdx
+++ b/custom-models/using.mdx
@@ -3,11 +3,11 @@ title: "Using a custom model"
 sidebarTitle: "Using a model"
 ---
 
-When a model training has completed, the model will show up alongside all the ready-made models in your project, and you can [add it like any other model](/content-moderation/adding-models).
+When a model training has completed, the model will show up alongside all the pre-built models in your project, and you can [add it like any other model](/content-moderation/adding-models).
 
 ### Response signature
 
-Custom models have a similar response signature to the [ready-made classifiers](/models/classifier-overview).
+Custom models have a similar response signature to the [pre-built classifiers](/models/classifier-overview).
 
 Each model returns an object with the detected label and the respective scores. This object is added to the API response under the model's key.
 
