--- a/get-started/concepts.mdx
+++ b/get-started/concepts.mdx
@@ -13,11 +13,12 @@ Each project has its own API key, so you can create multiple projects for exampl
 
 Models are used to analyze content. You can add multiple models to a project. Each model has its own settings and can be used to analyze content in a different way. <br></br>
 
-We offer 3 types of models:
+We offer 4 types of models:
 
-- Ready-made models
+- Pre-built models
 - Custom models
 - AI agents
+- Wordlists
 
 Read more about the different types of models in the [Model Studio](/model-studio/overview) section.
 
