--- a/get-started/introduction.mdx
+++ b/get-started/introduction.mdx
@@ -48,8 +48,8 @@ Can't find your use case? [Contact us](https://moderationapi.com/sales) and we'l
   Using AI agents to help you moderate.
 </Card>
 
-<Card title="Ready-made models" icon="cube" href="/models/overview">
-  Get an overview of the ready-made models available.
+<Card title="Pre-built models" icon="cube" href="/models/overview">
+  Get an overview of the pre-built models available.
 </Card>
 
 <Card title="Creating a custom model" icon="sparkles" href="/custom-models">
