--- a/model-studio/overview.mdx
+++ b/model-studio/overview.mdx
@@ -6,12 +6,11 @@ description: "Use the Model Studio to create custom models and AI agents for you
 
 The Model Studio is a powerful tool that allows you to create custom models and AI agents for your use case.
 
-#### 3 types of models
+#### 4 types of models
 
-<CardGroup cols={3}>
-
-<Card title="Ready-made models" href="/models/overview" icon="cube">
-  These are pre-built models that can be used to analyze content without any
+<CardGroup cols={2}>
+  <Card title="Pre-built models" href="/models/overview" icon="cube">
+    These are pre-built models that can be used to analyze content without any
   additional training.
 </Card>
 <Card title="AI agents" href="/ai-agents/overview" icon="robot">
@@ -22,11 +21,15 @@ The Model Studio is a powerful tool that allows you to create custom models and 
   These are models that are trained on user-provided data to analyze content
   specific to their use case.
 </Card>
+<Card title="Wordlists" href="/wordlists/overview" icon="list">
+  Prevent specific words and phrases from being used on your platform.
+</Card>
 
 </CardGroup>
 
-| Model                 | Needs training data | Customizable | Accuracy    | Effort |
-| --------------------- | ------------------- | ------------ | ----------- | ------ |
-| **Ready-made models** | No                  | No           | High        | Low    |
-| **AI agents**         | No                  | Yes          | Medium-High | Medium |
-| **Custom models**     | Yes                 | Yes          | Highest     | High   |
+| Model                | Needs training data | Customizable | Accuracy    | Effort |
+| -------------------- | ------------------- | ------------ | ----------- | ------ |
+| **Pre-built models** | No                  | No           | High        | Low    |
+| **AI agents**        | No                  | Yes          | Medium-High | Medium |
+| **Custom models**    | Yes                 | Yes          | Highest     | High   |
+| **Wordlists**        | No                  | Yes          | High        | Low    |
