--- a/models/classifier-overview.mdx
+++ b/models/classifier-overview.mdx
@@ -21,7 +21,7 @@ Each classifier model returns an object with the detected label and the respecti
   An object containing all the label scores.
 </ResponseField>
 
-## Ready-made text classifiers
+## Pre-built text classifiers
 
 <CardGroup cols={3}>
   <Card title="Toxicity" href="/models/toxicity" icon="fire">
