--- a/models/entity-matchers-overview.mdx
+++ b/models/entity-matchers-overview.mdx
@@ -65,7 +65,7 @@ All matcher models have the same response signature:
   matcher, the components would be the first and last name.
 </ResponseField>
 
-## Ready-made entity matchers
+## Pre-built entity matchers
 
 <CardGroup cols={3}>
 
