--- a/models/overview.mdx
+++ b/models/overview.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Ready-made models for content moderation"
+title: "Pre-built models for content moderation"
 sidebarTitle: "Overview"
 description: "Get started with industry-leading models for content moderation"
 ---
@@ -39,4 +39,4 @@ description: "Get started with industry-leading models for content moderation"
 
 ## Not finding what you need?
 
-Most use cases can be solved with our ready-made models. If you have a specific use case that is not covered by our ready-made models, you can train your own [custom model](/custom-models), use an [AI agent](/ai-agents), or [reach out](https://moderationapi.com/sales) to discuss your needs.
+Most use cases can be solved with our pre-built models. If you have a specific use case that is not covered by our pre-built models, you can train your own [custom model](/custom-models), use an [AI agent](/ai-agents), or [reach out](https://moderationapi.com/sales) to discuss your needs.
