--- a/review-queues/configuration.mdx
+++ b/review-queues/configuration.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Creating a new review queue"
-sidebarTitle: "Creating a queue"
+title: "Configuring review queues"
+sidebarTitle: "Configuring queues"
 ---
 
 To create a new queue you can press the plus button in side bar on the queue dashboard or simply [create a new queue here](https://moderationapi.com/app/moderation/new).
