--- a/content-moderation/analyze-content.mdx
+++ b/content-moderation/analyze-content.mdx
@@ -1,82 +1,31 @@
 ---
-title: "Analyze text"
-sidebarTitle: "Analyze text"
+title: "Analyze content"
+sidebarTitle: "Analyze content"
 ---
 
-To analyze text, you need to send a POST request with the text to the [text moderation endpoint](/api-reference) and you will receive a response with the results right away.
+To analyze content, you need to send a POST request with the content to the [moderation endpoint](/api-reference/analyze-text) and you will receive a response with the results right away.
 
-## Example
+Remember to [create a project](/content-moderation/creating-projects) first and configure the models you want to use to analyze your content.
 
-<CodeGroup>
+## Content types
 
-```typescript Node.js
-import ModerationApi from "@moderation-api/sdk";
+We provide 5 different endpoints for analyzing content:
 
-const moderationApi = new ModerationApi({
-  key: process.env.API_KEY,
-});
-
-const analysis = await moderationApi.moderate.text({
-  value:
-    "You can contact me on mr_robot[at]gmail|DOT|com or call me on 12 34 65 78",
-});
-```
-
-```javascript Node.js fetch
-const response = await fetch("https://moderationapi.com/api/v1/moderate/text", {
-  method: "POST",
-  headers: {
-    Authorization: `Bearer ${PROJECT_API_KEY}`,
-  },
-  body: JSON.stringify({
-    value:
-      "You can contact me on mr_robot[at]gmail|DOT|com or call me on 12 34 65 78",
-  }),
-});
-
-const data = await data.json();
-```
-
-</CodeGroup>
-
-```json Response example
-{
-  "status": "success",
-  "request": {
-    "timestamp": 1612792574690,
-    "quota_usage": 1
-  },
-  "content_moderated": true,
-  "data_found": true,
-  "flagged": true,
-  "original": "You can contact me on mr_robot[at]gmail|DOT|com or call me on 12 34 65 78",
-  "content": "You can contact me on {{ email hidden }} or call me on {{ number hidden }}",
-  "email": {
-    "found": true,
-    "mode": "SUSPICIOUS",
-    "matches": ["mr_robot[at]gmail|DOT|com"]
-  },
-  "phone": {
-    "found": true,
-    "mode": "NORMAL",
-    "matches": ["12 34 65 78"]
-  },
-  "sentiment": {
-    "label": "NEUTRAL",
-    "labelIndex": 0,
-    "score": 0.997857,
-    "label_scores": {
-      "NEUTRAL": 0.997857,
-      "POSITIVE": 0.001105,
-      "NEGATIVE": 0.000666
-    }
-  }
-}
-```
+- [Text moderation](/api-reference/analyze-text)
+- [Image moderation](/api-reference/analyze-image)
+- [Object moderation](/api-reference/analyze-object)
+- [Audio moderation (enterprise)](/api-reference/analyze-audio)
+- [Video moderation (enterprise)](/api-reference/analyze-video)
 
 ## Acting on the response
 
-Here are some examples on how to use the response in your application.
+It's up to you how you want to act on the result of the moderation.
+
+- You could block the content and return an error message to your user if it gets flagged.
+- You could store it to your database and let a human review it (e.g. use our [review queues](/review-queues)).
+- Or do something in between where you only review if the AI is not so sure about the content.
+
+Here we look at which fields you can use to act on the response.
 
 ### Utilize flagged field
 
