--- a/content-moderation/custom-region.mdx
+++ b/content-moderation/custom-region.mdx
@@ -4,9 +4,9 @@ sidebarTitle: "Custom regions"
 description: "Learn how to optimize your project with a custom region."
 ---
 
-Using a custom region is useful if you want to optimize your projects performance. You can select region near your own servers to reduce latency.
+You can use a custom region to optimize your projects performance or to comply with local regulations. We recommend to select a region near your own servers to reduce latency.
 
-To use a custom region, please contact us at [support@moderationapi.com](mailto:support@moderationapi.com) and we'll set it up for you.
+To use a custom region, please contact us at [support@moderationapi.com](mailto:support@moderationapi.com) and we'll set it up for you. Custom regions are available for enterprise customers.
 
 <Info>
   The default region is in central Europe, Frankfurt `eu-central-1`. If your
