--- a/content-moderation/overview.mdx
+++ b/content-moderation/overview.mdx
@@ -4,42 +4,45 @@ sidebarTitle: "Overview"
 description: "Learn to set up projects and submit content for moderation"
 ---
 
-## Setup project
+## Creating a project
 
-Before you can submit content for moderation, you need to create a project. Use projects to define the moderation rules for your content.
+Start by creating a project. You'll use projects to define the moderation rules for your content.
 
-<Card
-  title="Project setup"
-  icon="page"
-  href="/content-moderation/creating-projects"
->
-  How to create a project.
-</Card>
+<CardGroup cols={2}>
+  <Card
+    title="Project setup"
+    icon="page"
+    href="/content-moderation/creating-projects"
+  >
+    How to create a project.
+  </Card>
+</CardGroup>
 
-## Submitting content
+## Analyzing content
 
 After you've created a project, you can submit content for moderation.
 
 <CardGroup cols={2}>
-
-<Card title="Text" icon="align-left" href="/content-moderation/analyze-text">
-  Text moderation
-</Card>
-
-<Card title="Image" icon="image" href="/content-moderation/analyze-images">
-  Image moderation
-</Card>
-
-<Card title="Video" icon="film" href="/content-moderation/analyze-videos">
-  Video moderation
-</Card>
-
 <Card
-  title="Audio"
-  icon="waveform-lines"
-  href="/content-moderation/analyze-audio"
+  title="Analyzing content"
+  icon="bullseye"
+  href="/content-moderation/analyze-content"
 >
-  Audio moderation
+  How to analyze content.
 </Card>
 
+</CardGroup>
+
+## Ongoing optimization
+
+As you analyze content, you can use the results to improve the accuracy of the moderation and stay up to date with the latest content.
+
+<CardGroup cols={2}>
+  <Card
+    title="Ongoing optimization"
+    icon="chart-line"
+    href="/content-moderation/ongoing-optimization"
+  >
+    How to improve the accuracy of the moderation.
+  </Card>
 </CardGroup>
