--- a/ai-agents/creating-an-agent.mdx
+++ b/ai-agents/creating-an-agent.mdx
@@ -4,9 +4,9 @@ sidebarTitle: "Creating an agent"
 description: "Learn how to create AI agents for content moderation."
 ---
 
-AI Agents are one of the easiest ways to customize your moderation policies. You can create an agent in minutes, and use it to moderate your content in your projects.
+AI Agents are effectively specialized models that you can give custom guidelines for moderation. You can create an agent in minutes, and use it just like any other model in your projects.
 
-To create an AI agent you simply explain what your content policies are, and the AI agent will classify content based on your instructions.
+To create an AI agent, you simply explain what your content policies are, and the AI agent will classify content based on your instructions.
 
 ## How it works
 
@@ -19,7 +19,8 @@ To create an AI agent you simply explain what your content policies are, and the
     list of pre-defined rules, or create your own.
   </Step>
   <Step title="Use your AI agent">
-    Add the agent to classify your content in your projects.
+    Add the agent to classify your content in your projects, just like any other
+    model.
   </Step>
 </Steps>
 
@@ -34,7 +35,7 @@ If you need help creating AI agents please [send us a message](https://moderatio
 
 Head over to the [Model Studio](https://moderationapi.com/app/models) in your dashboard and press the "Add new agent" button.
 
-Here you'll give your agent a name and describe what it's job is. These fields are not used for moderation, but are useful for you to identify the agent.
+Here you'll give your agent a name and describe what its job is. These fields are not used for moderation, but are useful for you to identify the agent's purpose.
 
 Next you'll need to choose which LLM model should power your agent. We recommend using Llama Guard 3 because it's optimized for moderation, but you can also use GPT-4o-mini.
 
