--- a/ai-agents/using-your-agent.mdx
+++ b/ai-agents/using-your-agent.mdx
@@ -3,9 +3,9 @@ title: "Using AI agents"
 sidebarTitle: "Using your agent"
 ---
 
-After you've created an agent, the model will show up alongside all the pre-built models in your project, and you can [add it like any other model](/content-moderation/adding-models).
+After you've created an agent, it will show up alongside all the pre-built models in your project. Because AI agents are specialized models, you can [add them just like any other model](/content-moderation/adding-models).
 
-The agent will classify your content based on the safety categories you've defined when creating the agent.
+The agent will classify your content based on the safety categories and rules you've defined when creating the agent.
 
 ### Response signature
 
