--- a/content-moderation/overview.mdx
+++ b/content-moderation/overview.mdx
@@ -33,15 +33,15 @@ After you've created a project, you can submit content for moderation.
 
 </CardGroup>
 
-## Ongoing optimization
+## Optimization
 
 As you analyze content, you can use the results to improve the accuracy of the moderation and stay up to date with the latest content.
 
 <CardGroup cols={2}>
   <Card
-    title="Ongoing optimization"
+    title="Optimization"
     icon="chart-line"
-    href="/content-moderation/ongoing-optimization"
+    href="/content-moderation/optimizing-accuracy"
   >
     How to improve the accuracy of the moderation.
   </Card>
