--- a/review-queues/using-queues.mdx
+++ b/review-queues/using-queues.mdx
@@ -1,188 +1,188 @@
 ---
-title: "How to use review queues"
-sidebarTitle: "How to use queues"
-description: "Going over the basics of how to use review queues"
+title: "How to Use Review Queues"
+sidebarTitle: "Using Queues"
+description: "A step-by-step guide to reviewing and managing content that has been flagged for moderation"
 ---
 
 <Frame>
   <img
-    className="block "
+    className="block"
     src="/images/content-queue.png"
     alt="Review queue for reviewing and improving automated moderation"
   />
 </Frame>
 
-Review queues are a tool for reviewing and improving automated moderation. They are a way to review content that has been flagged by the model, take action on it, and optionally provide feedback to the model.
+Review queues are essential tools for reviewing, refining, and approving content flagged by automated moderation. They help you:
 
-The idea of the queue is to resolve content often, to keep the queue tidy. This means that you have reviewed the content, decided what to do with it, and don't need to look at it anymore.
+• Keep track of flagged items that need attention.  
+• Decide on the appropriate action for each item (e.g., approve, reject, escalate).  
+• Provide feedback to the model so it can learn from manual corrections over time.
 
-## How content enters a queue
+Keeping your queue tidy—i.e., frequently reviewing and resolving items—ensures you’re addressing all flagged content promptly. This article will show you how content enters a queue, how to navigate charts and the list view, and how to review, resolve, and filter items effectively.
 
-Content enters a queue when it is submitted to the API using any of the [/moderate](/api-reference/analyze-text) endpoints.
+## How Content Enters a Queue
 
-Content will then be added to the queue if it mathces the queue's configuration. By default only items that are [flagged](/content-moderation/flagging-thresholds) show up in the queue. See [how to configure queues](/review-queues/configuration#configuring-the-queue) to decide what content goes into a queue.
+Content is added to a queue when submitted to any of the [/moderate](/api-reference/analyze-text) endpoints. It shows up in a specific queue if it meets that queue’s configuration criteria. By default, only [flagged](/content-moderation/flagging-thresholds) items appear in the queue. Refer to [how to configure queues](/review-queues/configuration#configuring-the-queue) for more details.
 
-## Using the charts
+## Using the Charts
 
-The first thing you see when you open a queue is the chart. The chart shows the number of items in the queue over time. Bars represent the number of items submitted at a given day. The dark green part of the bar represents the items that have been resolved and the light green part of the bar represents items that are still in the queue, waiting to be resolved.
+When you open a queue, you’ll first see a chart showing the number of items over time:
 
-The chart is interactive, so you can zoom in on a date range by clicking and dragging on the chart. The filter will update to show items in the queue for the given date range.
+• Each bar represents items submitted on a specific day.  
+• Dark green portions show resolved items.  
+• Light green portions show items still awaiting review.
+
+Click and drag to zoom in on a specific date range, and the list below will filter to that range.
 
 <Frame caption="Selecting a date range using the chart">
   <img
-    className="block "
+    className="block"
     src="/images/queue-zoom.gif"
-    alt="Review queue for reviewing and improving automated moderation"
+    alt="Selecting a date range in the queue chart"
   />
 </Frame>
 
-Below the chart you can see the relevant labels and a circular gauge representing the progress on resolving items with that label.
+Below the chart, you’ll find labels and a circular gauge denoting progress toward resolving items with that label. You can click on labels to filter the queue by that label.
 
-You can press labels to filter the queue by that label.
+## Using the List View
 
-## Using the list view
+Below the charts is the list view, displaying items that need your attention. In the list view, you can:
 
-Below the charts you have the list of items in the queue. Here you can:
-
-- Open the detail view for an item by pressing on it
-- Resolve an item by pressing the checkmark
-- Take bulk actions on items by checking off items and press one of your actions
+• Click an item to open its detail view.  
+• Click the checkmark icon to resolve an item immediately.  
+• Select multiple items using checkboxes to take bulk actions, such as “resolve” or other custom [actions](/review-queues/actions).
 
 <Frame caption="The queue is a list of items that need to be reviewed">
   <img
-    className="block "
+    className="block"
     src="/images/content-queue-list.png"
-    alt="Review queue for reviewing and improving automated moderation"
+    alt="Review queue list view"
   />
 </Frame>
 
-If you quickly want to resolve a lot of items, you can select the items you want to resolve and press resolve. The queue will automatically refresh and the items will be removed from the queue.
+If you need to resolve multiple items quickly, select the relevant items and click “Resolve.” The queue automatically refreshes, removing those resolved items from view.
 
-## Reviewing content
+## Reviewing Content
 
 <Frame caption="The detail view for an item in the queue">
   <img
-    className="block "
+    className="block"
     src="/images/content-queue-detail-2.png"
     alt="Review queue detail view"
   />
 </Frame>
 
-When you press an item in the queue, you will be taken to the detail view for that item.
+Clicking an item in the list opens its detail view, which includes:
 
-Here you can see:
-
-- The original content
-- The labels that were applied to the item
-- If the item was flagged or not
-- The history of the item
-- Metadata that was submitted with the item
+• Original content.  
+• Labels the model applied.  
+• Whether the item was flagged.  
+• Metadata submitted with the item.  
+• Item history (useful for context or auditing).
 
 <Tip>
-  **HTML**
+  <strong>HTML</strong>
   <span>
-    Any content submitted as HTML will be fully rendered in the detail view,
-    including images, videos and audio. This enables you to easily review
-    content that contains media.
+    Any content submitted as HTML is fully rendered in the detail view,
+    including images, videos, and audio. This makes reviewing rich media
+    straightforward.
   </span>
 </Tip>
 
 <Tip>
-  **URLs**
+  <strong>URLs</strong>
   <span>
-    If any metadata looks like an URL, it will be rendered as a link. This could
-    be useful for linking to the content in your own system.
+    Metadata that looks like a URL becomes a clickable link. This is especially
+    helpful if you need to reference the content in your own system.
   </span>
 </Tip>
 
-### Correcting model decisions
+### Correcting Model Decisions
 
-If you disagree with the model's decision, you can correct it by removing the label that was applied and optionally select another label.
+If you disagree with the model’s labeling:
 
-If you remove all labels, it will be interpreted as a `NEUTRAL` label, indicating that the item should not have been flagged.
+1. Remove any incorrect labels.
+2. Optionally select a more appropriate label.
 
-<Frame caption="Correcting AI decision by removing a label and adding a new.">
+Removing all labels is interpreted as `NEUTRAL`, indicating no flag was warranted. Any corrections you make are captured for use in your next [adaptive model optimization](/custom-models/adaptive-model-optimization) training. Over time, this feedback loop refines the model’s predictions.
+
+<Frame caption="Correcting an AI decision by removing a label and adding a new one">
   <img
-    className="block "
+    className="block"
     src="/images/content-queue-correct.gif"
     alt="Correcting model decision"
   />
 </Frame>
 
-Next time you train a custom model, the feedback will be used for improving the model. See more about [adaptive model optimization here](/custom-models/adaptive-model-optimization).
+### Executing Actions and Resolving
 
-### Executing actions and resolving
-
-In the detail view you can also execute [actions](/review-queues/actions) for the item, or resolve the item.
-
-When the item is resolved, the detail view will automatically show the next item in the queue.
+You can also execute [actions](/review-queues/actions) in the detail view or mark the item as resolved. Once resolved, the detail view automatically navigates to the next pending item in the queue.
 
 <Tip>
-  **Keyboard shortcuts**
+  <strong>Keyboard Shortcuts</strong>
   <span>
-    In the detail view, you can use the keyboard shortcuts <kbd>cmd</kbd> +{" "}
-    <kbd>enter</kbd> to resolve an item, and <kbd>cmd</kbd> + <kbd>1</kbd>-
-    <kbd>9</kbd> to execute an action.
+    In the detail view, use <kbd>Cmd</kbd> + <kbd>Enter</kbd>
+    to resolve an item, and <kbd>Cmd</kbd> + <kbd>1</kbd>-<kbd>9</kbd>
+    to quickly run an action.
   </span>
 </Tip>
 
-## Resolving content
+## Resolving Content
 
-Resolving content means that you have reviewed the content and decided what to do with it. This could be to approve it, reject it, or take some other action.
+Resolving content means you’ve reviewed it and taken the desired action (e.g., approving, rejecting, or escalating). Once resolved, the item is removed from the queue.
 
-When you resolve an item, it is removed from the queue.
+You can resolve content in several ways:
 
-To recap, you can resolve content in a few different ways:
-
-1.  [By pressing the checkmark in list view](#using-the-list-view)
-2.  [By checking the checkbox in list view and pressing resolve](#using-the-list-view)
-3.  [By pressing resolve in the detail view](#executing-actions-and-resolving)
-4.  [By executeing an action that resolves the item](/review-queues/actions#resolving-an-item-when-action-is-executed)
-    <br></br>
+1. Click the checkmark in the list view.
+2. Select items in the list view, then click “Resolve.”
+3. Click “Resolve” in the detail view.
+4. Execute an action that also resolves the item (see [Actions](/review-queues/actions#resolving-an-item-when-action-is-executed))
 
 <Info>
-**Resolve scope**
-
-<span>
-Resolving items is scoped to a single queue. This means that resolving an item in one queue does not resolve it in another queue.
-
-This is important if you have multiple queues for different purposes. For example, you might have a queue for escalating content to a senior moderator. In this case you would escalate it to the senior moderator queue, and then resolve the item in the main queue.
-
-</span>
+  <strong>Resolve Scope</strong>
+  <span>
+    Resolving an item only affects that queue, which is important if you have
+    multiple queues. For instance, if you escalate content from the main queue
+    to a senior moderator queue, you would then resolve it in the main queue.
+    However, it remains active for senior moderators to review in the escalation
+    queue.
+  </span>
 </Info>
 
-## Using the filter
+## Using the Filter
 
-Using the queue filter button you can narrow down on a set of items in the queue.
+Use the filter button to narrow down items displayed in the queue. You can refine your view by context ID, author, or labels.
 
-### Show content from a thread
+### Show Content From a Thread
 
-If you submit a context ID with your content, you can filter the queue by that context ID.
-
-For example, if you submit a context ID for a thread in your forum, you can filter the queue to only show items from that thread in order. This makes it easy to review all content in a thread in one go, and see items in the context of the thread.
+If you submit a context ID with your content, the queue can be filtered to display items from that specific context (e.g., a forum thread), making it easier to see and review conversations in context.
 
 <Frame>
   <img
-    className="block "
+    className="block"
     src="/images/context-author.png"
     alt="Filtering by context and author"
   />
 </Frame>
 
-### Show content by user
+### Show Content by User
 
-If you submit an author ID with your content, you can filter the queue by that author ID.
+If you submit an author ID, you can click the author ID in the detail view to filter and see all items from that user.
 
-To do this you can press the author ID in the detail view. This will add the author ID to the filter and show you all items in the queue from that author.
+### Filter by Labels
 
-### Filter by labels
+You can also filter by labels. Selecting multiple labels shows all items that match any of those labels.
 
-You might want to filter the queue by a specific label. You can do this either by selecting the label in the chart, or by setting the labels in the filter.
+### Showing Resolved Items
 
-When filtering by labels, you can select multiple labels. This will show you all items that have any of the selected labels.
+By default, resolved items are hidden. To see these, check “Show all items” in the filter menu. You can also unresolve items here if you need to review them again.
 
-### Showing resolved items
+## Using the Review Queue for Model Feedback
 
-By default, resolved items are removed from the queue. If you need to see items you've previously resolved, you can check the "Show all items" checkbox in the filter.
+One of the biggest advantages of review queues is the ability to provide feedback that improves model performance:
 
-Here you can also unresolve items if you need to review them again.
+1. Manually correct or fine-tune labels on flagged content.
+2. During [adaptive model optimization](/custom-models/adaptive-model-optimization), the model uses that feedback to learn and make more accurate decisions in the future.
+3. Over time, this feedback loop results in fewer false positives and false negatives.
+
+By consistently reviewing items and correcting any misclassifications, your moderation processes will improve and become more aligned with your specific needs and guidelines.
