fix broken links

--- a/model-studio/overview.mdx
+++ b/model-studio/overview.mdx
@@ -13,7 +13,7 @@ The Model Studio is a powerful tool that allows you to create custom models and 
     These are pre-built models that can be used to analyze content without any
   additional training.
 </Card>
-<Card title="AI agents" href="/ai-agents/overview" icon="robot">
+<Card title="AI agents" href="/ai-agents" icon="robot">
   AI agents is an easy way of creating your own model, without prior training
   data. Just provide the AI with your set of guidelines.
 </Card>
