--- a/models/profanity.mdx
+++ b/models/profanity.mdx
@@ -31,7 +31,7 @@ description: "Detect and hide swear words in text."
 
 This model supports wordlists if you want to allow or block specific words.
 
-You can use the [wordlist editor](/models/wordlists)
+You can use the [wordlist editor](/wordlists)
 
 ## Supported languages
 
