--- a/models/word.mdx
+++ b/models/word.mdx
@@ -6,7 +6,7 @@ description: "Detect and hide words in text."
 
 > Model key: `word`
 
-This model helps you detect and hide your own list of words in text. To use it, you need to create a [wordlist](/models/wordlists) first.
+This model helps you detect and hide your own list of words in text. To use it, you need to create a [wordlist](/wordlists) first.
 
 ```json Response example
 {
@@ -24,6 +24,6 @@ This model supports all languages.
 
 This model supports wordlists if you want to allow or block specific words.
 
-You can use the [wordlist editor](/models/wordlists)
+You can use the [wordlist editor](/wordlists)
 
 <Snippet file="limitations.mdx" />
